--- a/jquery/exercises/markup/markup.html
+++ b/jquery/exercises/markup/markup.html
@@ -32,7 +32,7 @@
     <script src="markup.js"></script>
     <script>
         window.onload = function() {
-            parse("#wiki");
+            parse("#wiki", jQuery);
         }
     </script>
 </body>
