add more samples

--- a/advancedFunctions/index.html
+++ b/advancedFunctions/index.html
@@ -30,7 +30,7 @@
         gosheWalk("Mr", "kn");
     }
 
-    bindSample();
+    // bindSample();
 
     function applySample() {
         // this will be the object passed in the apply() function
@@ -66,7 +66,7 @@
         obj.walk.call(secondPerson, "Mr", "sofiaa");
     }
 
-    //callSample();
+    callSample();
 
     function methodSample() {
         // this will be the object itsel
